[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-promochator"
version = "0.0.1"
description = "Codebase for promochator"
requires-python = ">=3.8,<3.13"
dependencies = [
    "langchain==0.3.9",            
    "langchain-community==0.3.8", 
    "langchain-openai==0.2.10",   
    "fire~=0.6.0",
    "unidecode~=1.3.8",
    "uvicorn~=0.30.6",
    "python-dotenv~=1.0.1",
    "faiss-cpu~=1.8.0.post1",
    "pydantic~=2.8.2",
    "langchain-core==0.3.21", 
    "langserve>=0.3.0",
    "fastapi==0.112.2",
    "httpx~=0.25.2",
    "sse_starlette",
    "langgraph~=0.2.53"
]

[project.urls]
"Source" = "https://github.com/Solvro/ml-promochator"


[project.optional-dependencies]
jupyter = [
    "jupyterlab~=3.6",
    "pandas ~= 2.0",
    "matplotlib ~= 3.7",
    "seaborn ~= 0.12",
    "plotly ~= 5.14",
]
lint = ["ruff ~= 0.1", "pre-commit ~= 2.20"]
test = [
    "pytest ~= 7.1",
    "pytest-cases ~= 3.6",
    "pytest-cov ~= 3.0",
    "pytest-xdist ~= 2.5",
    "pytest-sugar ~= 0.9",
]
dev = ["ml-promochator[jupyter, lint, test]"]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    # "UP",  # pyupgrade
]
line-length = 120
ignore = [
    # "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]
extend-exclude = [".venv/", "build/", "dist/", "docs/"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.isort]
order-by-type = true
lines-between-types = 1
combine-as-imports = true
# known_first_party = "common"

ignore = [
    "I001",  
]

[tool.setuptools.dynamic]
readme = {file = ['README.md']}