[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "Codebase for promochator"
requires-python = ">=3.8"
dependencies = [
    "alembic~=1.13.2",
    "fastapi==0.112.2",
    "langchain~=0.2.10",
    "langchain-community~=0.2.12",
    "langchain-openai~=0.1.22",
    "nltk~=3.8.1",
    "pgvector~=0.3.3",
    "python-dotenv~=1.0.1",
    "scholarly~=1.7.11",
    "sqlmodel~=0.0.22",
    "unidecode~=1.3.8",
    "uvicorn==0.30.6",
]
[project.urls]
"Source" = "https://github.com/Solvro/ml-promochator"


[project.optional-dependencies]
jupyter = [
    "fire~=0.6.0",
    "jupyter~=1.0.0",
    "jupyterlab~=3.6",
    "matplotlib ~= 3.7",
    "pandas ~= 2.0",
    "seaborn ~= 0.12"
]
lint = ["ruff ~= 0.1", "pre-commit ~= 2.20"]
test = [
    "pytest ~= 7.1",
    "pytest-cases ~= 3.6",
    "pytest-cov ~= 3.0",
    "pytest-sugar ~= 0.9",
    "pytest-xdist ~= 2.5"
]
dev = ["app[jupyter, lint, test]"]

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    # "UP",  # pyupgrade
]
line-length = 120
ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "I001",
]
extend-exclude = [".venv/", "build/", "dist/", "docs/"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.isort]
order-by-type = true
lines-between-types = 1
combine-as-imports = true

[tool.setuptools.dynamic]
readme = {file = ['README.md']}